Use alpha for button to avoid hiding behind button.

--- a/src/group-view.css
+++ b/src/group-view.css
@@ -5,7 +5,7 @@
  * users: #60BADF
  * prefer: #6AD5A2
  * avoid: #F39354;
- * background: #4C5365;
+ * background: #4C5365; looks the same as rgba(0, 10, 35, 0.7);
  * background (active): #6E7891;
  * greyed out text: #A9A9A9;
  * shadow for drag: #939085
@@ -135,6 +135,7 @@ svg line.breaking {
   width: 200px;
   font: 28px Raleway;
   background-color: #4C5365;
+  background-color: rgba(0, 10, 35, 0.7);
   color: white;
   border-radius: 5px;
   border-width: 0px;
@@ -168,6 +169,7 @@ svg line.breaking {
     font-family: FontAwesome;
     font-size: 28px;
     color: #4C5365;
+    color: rgba(0, 10, 35, 0.7);
     white-space: normal;
     word-wrap: break-word;
     width:80%;
@@ -180,6 +182,7 @@ svg line.breaking {
     font-family: Raleway;
     font-size: 28px;
     color: #4C5365;
+    color: rgba(0, 10, 35, 0.7);
 }
 
 #group_size_icon_1x, #group_size_icon_2x{
@@ -197,6 +200,7 @@ svg line.breaking {
   font-size: 20px;
   border-radius: 5px;
   background-color: #4C5365;
+  background-color: rgba(0, 10, 35, 0.7);
   border-width: 0px;
   border-color: white;
   pointer-events: all;
@@ -232,6 +236,7 @@ svg line.breaking {
   bottom: 0%;
   background-color: white;
   color: #4C5365;
+  color: rgba(0, 10, 35, 0.7);
   outline: none;
 }
 */
